intTests/test_type_errors/err053.log.good
 Loading file "err053.saw"
 Type errors:
  err053.saw:8:13-8:21: Inaccessible type: "Uninterp"
  err053.saw:8:13-8:21: This type is available only after running `enable_deprecated`.

FAILED
